SERVER-13033: Static Initalizer race condition with CreateDirectClient and server-side Javascript