src/mongo/db/instance.cpp
@@ -81,6 +81,7 @@
 #include "mongo/platform/process_id.h"
 #include "mongo/s/d_logic.h"
 #include "mongo/s/stale_exception.h" // for SendStaleConfigException
+#include "mongo/scripting/engine.h"
 #include "mongo/util/fail_point_service.h"
 #include "mongo/util/file_allocator.h"
 #include "mongo/util/gcov.h"
@@ -1035,6 +1036,14 @@ namespace {
 
     DBClientBase * createDirectClient() {
         return new DBDirectClient();
+    }
+
+    MONGO_INITIALIZER(CreateJSDirectClient)
+        (InitializerContext* context) {
+
+        directDBClient = createDirectClient();
+
+        return Status::OK();
     }
 
     mongo::mutex exitMutex("exit");
